--- a/art-collection/package.json
+++ b/art-collection/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.3"
+    "next": "15.3.3",
+    "@reduxjs/toolkit": "^2.0.0",
+    "react-redux": "^9.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
